--- a/pages/homePage.html
+++ b/pages/homePage.html
@@ -18,21 +18,22 @@
         <div class="descText">
             <h1 class="introTitle">Hello , I'm Havvanur!</h1>
             <h3 class="proficient">Software Engineering Student at Izmir University of Economics</h3>
-            <p class="desc">As a software engineering student, I am improving myself in Backend and Web development. I am also interested in Data Science.After
-                developing myself in the sector for a while, I want to do a master's degree in Data Science. 
-                My goal is to be a Data Scientist in the future.</p>
+            <p class="desc">As a software engineering student, I am improving myself in Backend and Web development. I am also interested in Data Science. After developing myself in the sector for a while, I want to do a master's degree in Data Science. My goal is to be a Data Scientist in the future.</p>
+        </div>
+        <div class="scroll-down">
+            <a href="#educationalinfo">↓</a>
         </div>
     </section>
 
     <section class="educationalinfo" id="educationalinfo">
         <div class="gridEdu">
             <div class="education">
-                <h4>2021-Ongoing</h3>
+                <h4>2021-Ongoing</h4>
                 <h2 class="school">Izmir University of Economics</h2>
-                <h3>Engineering Department</h2>
+                <h3>Engineering Department</h3>
                 <h2 class="field">Software Engineering</h2>
-                <h3>4th Grade</h2>
-                <h4>Expected Graduation Date:June 2026</h4>
+                <h3>4th Grade</h3>
+                <h4>Expected Graduation Date: June 2026</h4>
             </div>
             <div class="projects">
                 <h2>Projects</h2>
@@ -43,16 +44,13 @@
                     <h3>Sep.2024 - Oct.2024</h3>
                     <h2 class="company">SCA Social - TNC Group</h2>
                     <h2 class="role">Project Management Intern</h2>
-                    <p>As a result of the 4-week training I received in the fields of Basic Management
-                    and Organization, Basic New Media and Digital Transformation, Basic
-                    Advertising and Marketing, and Basic Project Management, I went through a
-                    10-day portfolio preparation process.</p>
+                    <p>As a result of the 4-week training I received in the fields of Basic Management and Organization, Basic New Media and Digital Transformation, Basic Advertising and Marketing, and Basic Project Management, I went through a 10-day portfolio preparation process.</p>
                 </div>
                 <div class="destech">
                     <h3>Aug.2025 - Sep.2025</h3>
                     <h2 class="company">Destech Internet Hizmetleri</h2>
                     <h2 class="role">Software Engineering Intern</h2>
-                    <p>fısdjsıfjd</p>
+                    <p>Gained hands-on experience in web development, website design, database management, domain & email configuration, and project management. Worked with tools such as WordPress, cPanel, phpMyAdmin, Elementor, and Visual Studio Code. Designed and published a personal portfolio website using HTML, CSS, JavaScript, and PHP. Contributed to website design, responsive UI development, plugin integration, and SMTP-based contact form configuration.</p>
                 </div>
             </div>
         </div>
@@ -65,22 +63,19 @@
                 <h3>Aug.2024 - Dec.2024</h3>
                 <h2>Student Mentor</h2>
                 <h2 class="place">Izmir University of Economics</h2>
-                <p>I mentored 12 new Software Engineering students to 
-                    help them adapt to school.</p>
+                <p>I mentored 12 new Software Engineering students to help them adapt to school.</p>
             </div>
             <div class="gdg">
                 <h3>Sep.2024 - Oct.2024</h3>
                 <h2>Event and Organization Team Coordinator</h2>
                 <h2 class="place">GDG on Campus IUE</h2>
-                <p>I managed the planning and organization of technological and social events
-                    requested in line with Google technologies and members' demands.</p>
+                <p>I managed the planning and organization of technological and social events requested in line with Google technologies and members' demands.</p>
             </div>
             <div class="ibm">
                 <h3>Nov.2024 - May.2025</h3>
-                <h2>Head of Communcation Coordination (Organization Team)</h2>
+                <h2>Head of Communication Coordination (Organization Team)</h2>
                 <h2 class="place">IBM Z IUE</h2>
-                <p>I plan and organize the desired technological and social events with my team
-                    in line with IBM technologies and members' demands.</p>
+                <p>I plan and organize the desired technological and social events with my team in line with IBM technologies and members' demands.</p>
             </div>
         </div>
     </section>
@@ -97,15 +92,15 @@
                     <div class="computer">
                         <h3>Software Skills</h3>
                         <div class="languages">
-                            <img src="../images/icons/java.png" alt="">
-                            <img src="../images/icons/python.png" alt="">
-                            <img src="../images/icons/c-.png" alt="">
-                            <img src="../images/icons/c-sharp.png" alt="">
-                            <img src="../images/icons/Microsoft_.NET_logo.svg.png" alt="">
-                            <img src="../images/icons/mysql.png" alt="">
-                            <img src="../images/icons/html.png" alt="">
-                            <img src="../images/icons/css-3.png" alt="">
-                            <img src="../images/icons/php.png" alt="">
+                            <img src="../images/icons/java.png" alt="Java">
+                            <img src="../images/icons/python.png" alt="Python">
+                            <img src="../images/icons/c-.png" alt="C++">
+                            <img src="../images/icons/c-sharp.png" alt="C#">
+                            <img src="../images/icons/Microsoft_.NET_logo.svg.png" alt=".NET">
+                            <img src="../images/icons/mysql.png" alt="MySQL">
+                            <img src="../images/icons/html.png" alt="HTML">
+                            <img src="../images/icons/css-3.png" alt="CSS">
+                            <img src="../images/icons/php.png" alt="PHP">
                         </div>
                     </div>
                     <div class="language">
@@ -128,7 +123,7 @@
             <div class="interests">
                 <h2>Interests</h2>
                 <span>Dance</span>
-                <span>Rock Music(T-Rock)</span>
+                <span>Rock Music (T-Rock)</span>
                 <span>Volleyball</span>
                 <span>Extreme Sports</span>
                 <span>Bodybuilding and Cardio Exercises</span>
