--- a/pages/myProjects.html
+++ b/pages/myProjects.html
@@ -14,46 +14,46 @@
         <h2 class="mainTitleProj">My Projects</h2>
         <div class="projects">
             <div>
-                <img src="../images/Havvanur Karakaya LOGO.png" alt="">
+                <img src="../images/Projects/blue jack.png" alt="">
                 <h2>BlueJack</h2>
                 <a href="https://github.com/Havvanur777/BlueJack77">View Repository</a>
-                <p></p>
+                <p>One of my first-year projects, developed in Java, was the Blue Jack project — a console application simulating a customized card game. The project aimed to implement the game mechanics of “Blue Jack”; however, it remained incomplete and served primarily as an early learning experience in object-oriented programming and console-based game design.</p>
             </div>
             <div>
-                <img src="../images/Havvanur Karakaya LOGO.png" alt="">
+                <img src="../images/Projects/BEST HOTEL INTERFACE.png" alt="">
                 <h2>Best Hotel</h2>
                 <a href="https://github.com/Havvanur777/BEST_HOTEL">View Repository</a>
-                <p></p>
+                <p>This project is a comprehensive hotel booking application designed to simplify the process of finding accommodation. Built with Python, it allows users to search for hotels by selecting the city, check-in and check-out dates, number of guests and rooms, as well as currency and sorting preferences. Using Requests and BeautifulSoup, the application scrapes hotel data from Booking.com, organizes and processes it with Pandas, and exports results to CSV. The user-friendly interface is developed with Tkinter, where search results are displayed in a visual list. Input validations ensure correct date entries with error messages for invalid ones, while correct inputs provide a list of hotels sorted by price. Combining a powerful web scraping engine with an intuitive graphical user interface, the application offers users a fast and practical way to find the best accommodation options.</p>
             </div>
             <div>
-                <img src="../images/Havvanur Karakaya LOGO.png" alt="">
+                <img src="../images/Projects/Machine Learning project.png" alt="">
                 <h2>First Machine Learning Project</h2>
                 <a href="https://github.com/Havvanur777/Machine-Learning-First-Projecct">View Repository</a>
-                <p></p>
+                <p>A team project completed during the Aygaz Machine Learning Bootcamp, applying both supervised and unsupervised learning techniques on the Kaggle Movie Ratings Dataset. Using Linear Regression, movie ratings were predicted and evaluated with MSE, MAE, and R² score. For unsupervised learning, K-means clustering was applied to group users and movies, and the results were visualized. Additionally, a KNN classifier was optimized with Grid Search and evaluated using accuracy, precision, recall, F1 score, and a confusion matrix. The project was implemented in Python on Kaggle Notebooks.</p>
             </div>
             <div>
-                <img src="../images/Havvanur Karakaya LOGO.png" alt="">
+                <img src="../images/Projects/Student Internship Web .png" alt="">
                 <h2>Student Internship</h2>
                 <a href="https://github.com/serhatuzunbayir/StudentInternship">View Repository</a>
-                <p></p>
+                <p>This project is a team project developed for the SE410 Software Framework Applications course using C# .NET and the MVC architecture. It is designed as a job and internship portal where the Admin and Employer modules are built as a desktop application, while the Student module is implemented as a web application. Admins can monitor postings and generate reports, employers can manage job postings and applications, and students can create profiles, apply for jobs, track applications, and receive recommendations. The system also includes filtering, job matching, and notification features, offering a practical and user-friendly platform.</p>
             </div>
             <div>
-                <img src="../images/Havvanur Karakaya LOGO.png" alt="">
+                <img src="../images/Projects/Pam .png" alt="">
                 <h2>PAM System</h2>
                 <a href="https://github.com/alperozgursahin/PAM-System">View Repository</a>
-                <p></p>
+                <p>A team console project for the SE311 Software Architecture course, built in Java, that simulates LOCAL, LDAP, and KERBEROS authentication. The system applies multiple design patterns, including Abstract Factory, Adapter, Template, Singleton, Iterator, and Facade, to create a modular and extensible authentication mechanism.</p>
             </div>
             <div>
-                <img src="../images/Havvanur Karakaya LOGO.png" alt="">
+                <img src="../images/Projects/Buggy Test.png" alt="">
                 <h2>Buggy</h2>
                 <a href="https://github.com/denizterziler/SE322-Section1-7">View Repository</a>
-                <p></p>
+                <p>A team project for the SE322 Software Testing course, developed as a Java-based e-commerce console application. The main focus of the project was to apply unit testing with JUnit, performing both positive and negative test cases to ensure system reliability and correctness.</p>
             </div>
             <div>
-                <img src="../images/Havvanur Karakaya LOGO.png" alt="">
+                <img src="../images/Projects/Portfolio .png" alt="">
                 <h2>My Personal Website</h2>
                 <a href="https://github.com/Havvanur777/MyPersonalWebsite">View Repository</a>
-                <p></p>
+                <p>Designed and developed a responsive portfolio website using HTML, CSS, JavaScript, and PHP. Showcases projects, certificates, and skills with an interactive UI, gallery components, and a functional contact form.</p>
             </div>
         </div>
     </section>
